bk_ida/gobmkida/g2/get_command
/data/output_dir/patch/gobmk/ida/gcc/O2/gobmk-gcc-O2/get_command/src/interface/play_ascii.c:875:19: error: use of undeclared identifier 'unk_4A1E3F'
if ( memcmp( v1, &unk_4A1E3F, 7uLL) ) 
                  ^
1 error generated.
make: *** [/data/output_dir/patch/gobmk/ida/gcc/O2/gobmk-gcc-O2/get_command/src/obj/2/play_ascii.o] Error 1
